--- a/composer.json
+++ b/composer.json
@@ -20,23 +20,23 @@
   ],
   "require": {
     "php": "^8.0",
-    "laravel/framework": "^9.0.0 | ^10.0.0",
-    "laravel/sanctum": "^2.14.0 | ^3.0.1",
+    "laravel/framework": "^9.0.0 | ^10.0.0 | ^11.0.0",
+    "laravel/sanctum": "^2.14.0 | ^3.0.1 | ^4.0.2",
     "spatie/enum": "^3.13.0",
     "spatie/laravel-package-tools": "^1.13.6"
   },
   "require-dev": {
-    "beyondcode/laravel-dump-server": "^1.8.0",
+    "beyondcode/laravel-dump-server": "^1.8.0 | ^2.0.0",
     "laravel/pint": "^1.2.0",
-    "nunomaduro/collision": "^6.4.0",
-    "nunomaduro/larastan": "^2.2.5",
+    "nunomaduro/collision": "^6.4.0 | ^7.0 | ^8.0",
+    "larastan/larastan": "^2.0",
     "nunomaduro/phpinsights": "^2.6.1",
-    "orchestra/canvas": "^7.5.0",
-    "orchestra/testbench": "^7.24.1",
-    "orchestra/testbench-dusk": "^7.25.1",
+    "orchestra/canvas": "^7.5.0 | ^8.0 | ^9.0",
+    "orchestra/testbench": "^7.24.1 | ^8.0 | ^9.0",
+    "orchestra/testbench-dusk": "^7.25.1 | ^8.0 | ^9.0",
     "phpstan/phpstan-deprecation-rules": "^1.0.0",
     "phpstan/phpstan-phpunit": "^1.1.1",
-    "phpunit/phpunit": "^9.5.25",
+    "phpunit/phpunit": "^9.5.25 | ^10.0 | ^11.0",
     "pusher/pusher-php-server": "^7.2.1",
     "squizlabs/php_codesniffer": "^3.7.1"
   },
